Fixed the bug so that irc messages don't overlap images

--- a/static/less/urls.less
+++ b/static/less/urls.less
@@ -51,6 +51,7 @@
 	float:right;
 	padding:5px;
 	border:1px solid #92cae4;
+    overflow:auto;
 }
 a.nick {
   font-size:1em;
@@ -81,5 +82,7 @@ a.irc {
     &:hover {  color:#023a5e; text-decoration:underline;}
 }
 .message-text {
+    margin: 0px 5px 0px 0px;
+    overflow:auto;
     display: none;
 }
